# fit-vut-ial_2017_du1

./: CMakeLists.txt  readme.md
c202/: c202-test  c202.c
c204/: c204-test  c204.c  c204.h
c206/: c206-test  c206.c
